--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "multiplayer javascript online game",
   "private": true,
+  "type": "module",
   "scripts": {
     "build-front": "webpack",
     "start": "node server.js",
@@ -20,8 +21,10 @@
   },
   "homepage": "https://github.com/levi218/jump-quest#readme",
   "dependencies": {
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "matter-js": "^0.14.2",
+    "p5": "^0.10.2",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "uws": "^10.148.2"
