--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build-front": "webpack",
     "start": "node server.js",
     "dev": "gulp",
-    "dev-socketio": "gulp server_client_test"
+    "dev-multi": "gulp multi"
   },
   "repository": {
     "type": "git",
@@ -32,6 +32,7 @@
   "devDependencies": {
     "browser-sync": "^2.26.7",
     "clean-webpack-plugin": "^3.0.0",
+    "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-nodemon": "^2.4.2",
     "html-webpack-plugin": "^3.2.0",
