--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp": "^4.0.2",
     "gulp-nodemon": "^2.4.2",
     "html-webpack-plugin": "^3.2.0",
+    "merge-stream": "^2.0.0",
     "nodemon": "^2.0.2",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
